--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "bootstrap": "^4.5.3",
+    "lodash": "^4.17.20",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "rxjs": "~6.6.0",
@@ -36,6 +37,7 @@
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
     "@types/jasmine": "~3.6.0",
+    "@types/lodash": "^4.14.167",
     "@types/node": "^12.11.1",
     "@types/redux-logger": "^3.0.8",
     "codelyzer": "^6.0.0",
