--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "NODE_ENV=test ng e2e",
+    "test:proxy": "node e2e/proxy.js",
+    "wdm": "webdriver-manager"
   },
   "private": true,
   "dependencies": {
@@ -41,6 +43,8 @@
     "@types/node": "^12.11.1",
     "@types/redux-logger": "^3.0.8",
     "codelyzer": "^6.0.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.6",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
@@ -48,7 +52,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
